# Improved-Path-Tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  test_automation.py
scenes/: glass_window.json  maze.json  mirrors.json  my_scene.json  my_scene_mirror.json  spheres.json
src/: CMakeLists.txt  main.cpp  main.cu
src/containers/: CMakeLists.txt  Ray.cpp  Vec.cpp  Vec3.cpp
src/containers/include/containers/: Ray.hpp  Vec.hpp  Vec3.hpp
src/data/: CMakeLists.txt  SceneData.cpp
src/data/include/scene/: SceneData.hpp
src/objects/: CMakeLists.txt  Sphere.cpp
src/objects/include/objects/: EReflectionType.hpp  Sphere.hpp
src/renderer/: CMakeLists.txt  Constants.hpp  HitData.cu  ImageData.hpp  RenderController.cu  Renderer.cpp  Renderer.cu  Renderer2.cpp  RendererCPU.cpp  RendererCPU.hpp  RendererGPU.cu
src/renderer/helpers/: Coordinates.cu  ImageData.cpp  ImageData.hpp  LoopRange.cu  PixelData.cpp  PixelData.hpp  Range.cu  RenderData.cu  SceneConstants.cpp  SceneConstants.hpp
src/renderer/include/renderer/: RenderController.hpp  Renderer.hpp  Renderer2.hpp
src/scene/: CMakeLists.txt  Scene.cpp  SceneData.cpp  SceneData.cu
src/scene/cuda/objects/: AObject.hpp  Common.hpp  Constants.hpp  Helpers.hpp  Plane.cu  Sphere.cu
src/scene/include/scene/: Scene.hpp  SceneData.hpp
src/scene/include/scene/objects/: AObject.hpp  Camera.hpp  EReflectionType.hpp  ObjectData.hpp  Plane.cu  RayData.hpp  Sphere.cu  Sphere.hpp
src/scene/objects/: AObject.cpp  AObject.cu  Camera.cpp  ObjectData.cpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
src/utils/: CMakeLists.txt  CudaUtils.cu  Image.cpp  InputParser.cpp  JsonUtils.cpp  Measurements.cpp  Ray.cpp  Vec.cpp
src/utils/include/utils/: CudaUtils.hpp  Image.hpp  InputParser.hpp  Measurements.hpp  Ray.hpp  Vec.hpp
